src/objects/GVS_DeployError__c.object
<CustomObject>
    <fields>
        <fullName>DeploymentStep__c</fullName>
        <label>Deployment Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorLine__c</fullName>
        <label>Error Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorType__c</fullName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorsNo__c</fullName>
        <label>#Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GVS_Settings__c</fullName>
        <label>Picklist Settings</label>
        <referenceTo>GVS_Settings__c</referenceTo>
        <relationshipLabel>Deployment Errors</relationshipLabel>
        <relationshipName>PicklistDeployErrors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NotifyErrorsTo__c</fullName>
        <label>Notify Errors To</label>
        <type>Email</type>
    </fields>
    <label>GVS - Deploy Error</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GVS_ERR-{0000}</displayFormat>
        <label>Deploy Error Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GVS - Deploy Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>